force-app/main/default/objects/Merchant_Payment_Terms__c/Merchant_Payment_Terms__c.object-meta.xml
<CustomObject>
    <description>This object is used in the Product Build to store Merchant Payment Terms that are related against each deal.</description>
    <label>Merchant Payment Terms</label>
    <nameField>
        <displayFormat>Mercht Pymt Terms-{00000}</displayFormat>
        <label>Merchant Payment Terms</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>