force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Please input the the total amount for this Merchant for this deal based on these terms.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>