force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Amount_per__c.field-meta.xml
<CustomField>
    <fullName>Amount_per__c</fullName>
    <label>Amount(%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>