force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipName>Payment_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>