force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Number</valueSetName>
    </valueSet>
</CustomField>