force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Merchant Payment Terms</relationshipLabel>
    <relationshipName>Merchant_Payment_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>