force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Discount_Terms__c.field-meta.xml
<CustomField>
    <fullName>Discount_Terms__c</fullName>
    <inlineHelpText>Please select if there is any related volume discounting relevant.</inlineHelpText>
    <label>Discount Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Free every 15</fullName>
            </value>
            <value>
                <fullName>1 Free every 20</fullName>
            </value>
            <value>
                <fullName>1 Free every 25</fullName>
            </value>
            <value>
                <fullName>1 Free every 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>