force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Pay_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_Date__c</fullName>
    <description>Allows user to select a &apos;Pay by&apos; Date</description>
    <label>Pay by Date</label>
    <type>Date</type>
</CustomField>