force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Terms_Type__c.field-meta.xml
<CustomField>
    <fullName>Terms_Type__c</fullName>
    <inlineHelpText>Please select if this Deal Merchant Payment Term record relates to either the deposit or balance.</inlineHelpText>
    <label>Terms Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>