force-app/main/default/objects/Merchant_Payment_Terms__c/fields/Type_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Payment__c</fullName>
    <inlineHelpText>Please select the payment type for the terms of this deal with the merchant.</inlineHelpText>
    <label>Type of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Transfer</fullName>
            </value>
            <value>
                <fullName>IMT</fullName>
            </value>
            <value>
                <fullName>Foreign Payment</fullName>
            </value>
            <value>
                <fullName>Polar Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>