force-app/main/default/objects/Merchant_Payment_Terms__c/validationRules/Ensure_Pay_by_Date_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Pay_by_Date_selected</fullName>
    <active>true</active>
    <description>When &quot;Paid by specific date&quot; is selected, forces user to select a Pay by Date in the calender</description>
    <errorConditionFormula>AND(
(ISPICKVAL(Type__c, &quot;Paid by Specific Date&quot;)), 
ISBLANK(Pay_by_Date__c))</errorConditionFormula>
    <errorDisplayField>Pay_by_Date__c</errorDisplayField>
    <errorMessage>Please select a Pay by Date!</errorMessage>
</ValidationRule>